--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="C:\Users\manoj\Videos\sem5\SAVE_20231027_224736.jpg" alt="Manoj's Profile Photo">
+        <img src="SAVE_20231027_224736.jpg" alt="Manoj's Profile Photo">
         <p>I am passionate about cricket, movies, swimming, politics, current affairs, reading books, puranas, music, history, geography, and watching food and travel vlogs.</p>
     </section>
 
