--- a/index.html
+++ b/index.html
@@ -22,23 +22,22 @@
     <section id="home">
         <h2>Welcome!</h2>
         <p>Hey there! 👋 I'm Mandla Siva Manoj. I'm a student pursuing a Bachelor of Technology degree in Electrical Engineering @ IIT Madras.</p>
-        <div class="content-section">
-            <h3>About Me:</h3>
-            <ul>
-                <li>🏫 Junior at IIT Madras</li>
-                <li>🌱 Currently learning software development, competitive programming, and machine learning</li>
-                <li>👯 Looking to collaborate on web development and machine learning</li>
-                <li>➡️ Proficient in C/C++/Python</li>
-                <li>➡️ Code enthusiast</li>
-                <li>➡️ Problem-solving</li>
-                <li>➡️ Web developer/front-end</li>
-                <li>😄 Pronouns: He/Him</li>
-            </ul>
-        </div>
-        <div class="content-section">
-            <h3>📫 How to reach me:</h3>
-            <p>Email: <a href="mailto:sivamanojmandla@gmail.com">sivamanojmandla@gmail.com</a></p>
-        </div>
+        <img src="C:\Users\manoj\Videos\sem5\SAVE_20231027_224736.jpg" alt="Manoj's Profile Photo">
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <ul>
+            <li>🏫 Senior at IIT Madras</li>
+            <li>🌱 Currently learning software development, competitive programming, and machine learning</li>
+            <li>👯 Looking to collaborate on web development and machine learning</li>
+            <li>➡️ Proficient in C/C++/Python</li>
+            <li>➡️ Code enthusiast</li>
+            <li>➡️ Problem-solving</li>
+            <li>➡️ Web developer/front-end</li>
+            <li>😄 Pronouns: He/Him</li>
+        </ul>
+        <p>I am passionate about cricket, movies, swimming, politics, current affairs, reading books, puranas, music, history, geography, and watching food and travel vlogs.</p>
         <div class="content-section">
             <h3>Hobbies:</h3>
             <ul>
@@ -51,23 +50,17 @@
         </div>
     </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <img src="SAVE_20231027_224736.jpg" alt="Manoj's Profile Photo">
-        <p>I am passionate about cricket, movies, swimming, politics, current affairs, reading books, puranas, music, history, geography, and watching food and travel vlogs.</p>
-    </section>
-
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <img src="AI_Logo.png"alt="Project 1 Photo">
+            <img src="C:\Users\manoj\OneDrive\Documents\programming\c++\cp\AI_Logo.png"alt="Project 1 Photo">
             <p>Description of Project 1.</p>
             <a href="https://link-to-project1.com" target="_blank">Link</a>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <img src="cpp_logo.png" alt="Project 2 Photo">
+            <img src="C:\Users\manoj\OneDrive\Documents\programming\c++\cp\cpp_logo.png" alt="Project 2 Photo">
             <p>Description of Project 2.</p>
             <a href="https://link-to-project2.com" target="_blank">Link</a>
         </div>
@@ -75,14 +68,17 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out to me at:</p>
-        <ul>
-            <li>Email: <a href="mailto:manojvirat5050@gmail.com">Gmail</a></li>
-            <li>Phone: +91 6305819678</li>
-            <li><a href="https://www.linkedin.com/in/siva-manoj-mandla-06908225b/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/shiv-manoj" target="_blank">GitHub</a></li>
-        </ul>
+        <p>Feel free to reach out to me through any of the following channels:</p>
+        <div class="content-section">
+            <h3>📫 How to Reach Me:</h3>
+            <p></strong>Email:</strong> <a href="mailto:sivamanojmandla@gmail.com">sivamanojmandla@gmail.com</a></p>
+            <p></strong>Phone:</strong> +91 6305819678</a></p>
+            <p></strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/siva-manoj-mandla-06908225b/" target="_blank">linkedin.com/in/siva-manoj-mandla</a></p>
+            <p></strong>GitHub:</strong> <a href="https://github.com/shiv-manoj" target="_blank">github.com/shiv-manoj</a></p>
+
+        </div>
     </section>
+    
 
     <footer>
         <p>&copy; 2024 Manoj's Portfolio</p>
