--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="home">
         <h2>Welcome!</h2>
         <p>Hey there! 👋 I'm Mandla Siva Manoj. I'm a student pursuing a Bachelor of Technology degree in Electrical Engineering @ IIT Madras.</p>
-        <img src="C:\Users\manoj\Videos\sem5\SAVE_20231027_224736.jpg" alt="Manoj's Profile Photo">
+        <img src="SAVE_20231027_224736.jpg" alt="Manoj's Profile Photo">
     </section>
 
     <section id="about">
@@ -54,13 +54,13 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <img src="C:\Users\manoj\OneDrive\Documents\programming\c++\cp\AI_Logo.png"alt="Project 1 Photo">
+            <img src="AI_Logo.png"alt="Project 1 Photo">
             <p>Description of Project 1.</p>
             <a href="https://link-to-project1.com" target="_blank">Link</a>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <img src="C:\Users\manoj\OneDrive\Documents\programming\c++\cp\cpp_logo.png" alt="Project 2 Photo">
+            <img src="cpp_logo.png" alt="Project 2 Photo">
             <p>Description of Project 2.</p>
             <a href="https://link-to-project2.com" target="_blank">Link</a>
         </div>
