--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-md-4">
-                    <img src="C:\Users\manoj\Downloads\Resume\EE21B083_photo.jpg">
+                    <img src="EE21B083_photo.jpg">
                 </div>
                 <div class="col-lg-8 col-md-8">
                     <div class="d-flex flex-column">
@@ -247,7 +247,7 @@
 
     <div class="container">
         <footer class="bg-dark p-5 text-center">
-            <form method="get" action="C:\Users\manoj\Downloads\Resume\Resume_latest.pdf" target="_blank">
+            <form method="get" action="Resume_latest.pdf" target="_blank">
                <button class="btn bg-white" type="submit" ><i class="fa fa-download fa-2x cl ">Download</i></button>
             </form>
         </footer>
