--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
     <div class="container">
         <footer class="bg-dark p-5 text-center">
-            <form method="get" action="Resume_latest.pdf" target="_blank">
+            <form method="get" action="Resume1.pdf" target="_blank">
                <button class="btn bg-white" type="submit" ><i class="fa fa-download fa-2x cl ">Download</i></button>
             </form>
         </footer>
